Adicionado comunicação Frontend to ClientD.