@@ -6,8 +6,10 @@
 package br.ufmt.sd.frontendsd;
 
 import br.ufmt.sd.frontendsd.model.ItemTabelaArquivos;
+import br.ufmt.sd.serverws.ClienteD;
 import br.ufmt.sd.serverws.DescricaoArquivo;
 import br.ufmt.sd.serverws.ItemBuscaNome;
+import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -15,17 +17,11 @@ import java.util.ResourceBundle;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.scene.control.Button;
-import javafx.scene.control.TableRow;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextField;
-import javafx.scene.input.MouseEvent;
-import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
-import javafx.util.Callback;
 
 /**
  *
@@ -55,22 +51,6 @@ public class FXMLDocumentController implements Initializable {
 
         // Mostrar a lista de arquivos na tabela
         tableListaArquivos.setItems(observableList);
-
-        tableListaArquivos.setRowFactory(new Callback<TableView<ItemTabelaArquivos>, TableRow<ItemTabelaArquivos>>() {
-
-            @Override
-            public TableRow<ItemTabelaArquivos> call(TableView<ItemTabelaArquivos> p) {
-                final TableRow<ItemTabelaArquivos> row = new TableRow<>();
-                row.setOnMouseClicked(new EventHandler<MouseEvent>() {
-                    @Override
-                    public void handle(MouseEvent t) {
-                        showBottonPaneBusca(row.getItem());
-                    }
-                });
-
-                return row;
-            }
-        });
     }
 
 //    @FXML
@@ -83,16 +63,27 @@ public class FXMLDocumentController implements Initializable {
 //    }
     @Override
     public void initialize(URL url, ResourceBundle rb) {
-        // TODO
+        // TODOe
     }
 
-    private void showBottonPaneBusca(ItemTabelaArquivos ita) {
-     
-        HBox hBox = new HBox();
-        
-        Button btnOk = new Button("Baixar");
-        hBox.getChildren().addAll(btnOk);
-        vBoxBottonBusca.getChildren().add(hBox);
+    @FXML
+    private void handleButtonBaixar(ActionEvent event) {
+
+        ItemTabelaArquivos item = (ItemTabelaArquivos) tableListaArquivos.getSelectionModel().getSelectedItem();
+        if (item != null) {
+            System.out.println(item.getNomeArquivo());
+            DescricaoArquivo descricaoArquivo = new DescricaoArquivo();
+            descricaoArquivo.setMd5Arquivo(item.getMd5Arquivo());
+            descricaoArquivo.setTamanho(item.getTamanho());
+            ArrayList<ClienteD> clienteDs = new ArrayList<>();
+            for (ClienteD clienteD : getClientsD(descricaoArquivo)) {
+                clienteDs.add(clienteD);
+            }
+            DownloaderArquivo da = new DownloaderArquivo(
+                    new File("/home/baby/Área de Trabalho/arquivo"),
+                    descricaoArquivo, item.getNomeArquivo(), clienteDs);
+            da.run();
+        }
     }
 
     private static java.util.List<br.ufmt.sd.serverws.ItemBuscaNome> buscaArquivo(java.lang.String termo) {
@@ -101,10 +92,10 @@ public class FXMLDocumentController implements Initializable {
         for (int i = 1; i < 40; i++) {
             ItemBuscaNome itemBuscaNome = new ItemBuscaNome();
             DescricaoArquivo da = new DescricaoArquivo();
-            da.setTamanho(Long.valueOf(1000000000));
-            da.setMd5Arquivo("600996da6a7c25fd2b6614fac2aa440e");
+            da.setTamanho(new Long(113427l));
+            da.setMd5Arquivo("5c4de510acea159667f4fdac9ad5838b");
             itemBuscaNome.setDescricaoArquivo(da);
-            itemBuscaNome.setNomeArquivo("Xuxa só para baixinhos " + i);
+            itemBuscaNome.setNomeArquivo("gato " + i);
 
             itensBuscaNomes.add(itemBuscaNome);
         }
@@ -116,9 +107,16 @@ public class FXMLDocumentController implements Initializable {
     }
 
     private static java.util.List<br.ufmt.sd.serverws.ClienteD> getClientsD(br.ufmt.sd.serverws.DescricaoArquivo descricao) {
-        br.ufmt.sd.serverws.Server_Service service = new br.ufmt.sd.serverws.Server_Service();
-        br.ufmt.sd.serverws.Server port = service.getServerPort();
-        return port.getClientsD(descricao);
+        List<ClienteD> clienteDs = new ArrayList<>();
+        ClienteD clienteD = new ClienteD();
+        clienteD.setEndereco("192.168.0.5");
+        clienteD.setVelocidadeConexao(Float.parseFloat("10000"));
+
+        clienteDs.add(clienteD);
+        return clienteDs;
+//        br.ufmt.sd.serverws.Server_Service service = new br.ufmt.sd.serverws.Server_Service();
+//        br.ufmt.sd.serverws.Server port = service.getServerPort();
+//        return port.getClientsD(descricao);
     }
 
 }
